fix(server,loadtest): eliminate hang under connection bursts
A 300-client LoadTest run never completed. Thread dumps and socket
state showed the cause: 96 client sockets ESTABLISHED on the client
side with no corresponding socket on the server, while the server sat
idle in accept() with every pool thread parked.

Three faults compounded:

1. The pool used CallerRunsPolicy, so once the pool and queue filled,
   submit() ran an entire client session on the accept thread and the
   server stopped accepting. RejectedExecutionException never fired,
   which is why "Refused" was always 0 -- there was no back-pressure
   at all, only a stall.
2. The default listen backlog (50) overflowed under a 300-client
   burst. Linux drops those connections without sending an RST, but
   the client's handshake has already completed, so connect() succeeds
   and the client waits forever on a socket nobody owns.
3. LoadTest had no timeouts, and join() waits for the slowest thread,
   so one stranded socket hung the whole run.

Server:
- Use AbortPolicy so overload becomes an immediate refusal with a
  reason instead of blocking the accept loop.
- Raise the listen backlog to 1024 so refusals come from the executor,
  where the server can answer, rather than silently from the kernel.
- Give each client a bounded outbox drained by a dedicated virtual
  writer thread, so one slow reader can no longer block a broadcast or
  hold a worker slot. A client that falls too far behind is dropped
  deliberately and logged.
- Time out unfinished handshakes (10s) to reclaim worker slots.
- Use execute() rather than submit(), which was swallowing handler
  exceptions into a Future nobody read.
- Flush a client's outbox before closing its socket; try-with-resources
  closed the socket first and lost the final message, including
  "Username unavailable".
- Queue a client's own welcome before the join broadcast so a mass join
  cannot starve it out.
- Survive a failed accept() instead of dying, pausing be